--- a/index.html
+++ b/index.html
@@ -56,17 +56,22 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
-                <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Yue Wu</a><sup>1,2</sup>,</span>
+              
+              <span class="author-block">
+                <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+              
+              <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
                   </span>
-                  </div>
+            </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Arxiv 2025</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block">
+                        <sup>1</sup>State Key Laboratory of Autonomous Intelligent Unmanned Systems, Tongji University
+                        <sup>2</sup>Shanghai Innovation Institute
+                        <sup>3</sup>Shanghai Jiao Tong University
+                    <br>Arxiv 2025</span>
                   </div>
 
                   <div class="column has-text-centered">
