--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">
-                        <sup>1</sup>State Key Laboratory of Autonomous Intelligent Unmanned Systems, Tongji University
+                        <sup>1</sup>Tongji University
                         <sup>2</sup>Shanghai Innovation Institute
                         <sup>3</sup>Shanghai Jiao Tong University
                         <sup>4</sup>Akool Research
