--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="tyrionwuyue.github.io" target="_blank">Yue Wu</a><sup>1,2</sup>,</span>
+                <a href="https://tyrionwuyue.github.io/" target="_blank">Yue Wu</a><sup>1,2</sup>,</span>
               
               <span class="author-block">
                 <a href="https://github.com/neuralchen" target="_blank">Xuanhong Chen</a><sup>3</sup>,</span>
