--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">
-                        <sup>1</sup>Tongji University
-                        <sup>2</sup>Shanghai Innovation Institute
-                        <sup>3</sup>Shanghai Jiao Tong University
+                        <sup>1</sup>Tongji University, 
+                        <sup>2</sup>Shanghai Innovation Institute, 
+                        <sup>3</sup>Shanghai Jiao Tong University, 
                         <sup>4</sup>Akool Research
                     <br>Arxiv 2025</span>
                   </div>
@@ -283,7 +283,7 @@
 
 
 <!-- Paper poster -->
-<section class="hero is-small is-light">
+<!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title">Poster</h2>
@@ -293,7 +293,7 @@
         
       </div>
     </div>
-  </section>
+  </section> -->
 <!--End paper poster -->
 
 
