--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
       <h2 class="title is-3 has-text-centered">Self-reenacted Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
+          <video poster="" id="self_video1" autoplay controls muted loop height="100%" preload="metadata">
             <!-- Your video file here -->
-            <source src="static/self_ren/001.mp4"
-            type="video/mp4">
+            <source src="static/self_ren/001.mp4" type="video/mp4">
+            <p>Your browser does not support the video tag.</p>
           </video>
         </div>
         <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
+          <video poster="" id="self_video2" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
             <source src="static/self_ren/001.mp4"
             type="video/mp4">
@@ -217,21 +217,21 @@
       <h2 class="title is-3 has-text-centered">Cross-reenacted Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
+          <video poster="" id="cross_video1" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
             <source src="static/cross_ren/001.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
+          <video poster="" id="cross_video2" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
             <source src="static/cross_ren/001.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
+          <video poster="" id="cross_video3" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
             <source src="static/cross_ren/001.mp4"
             type="video/mp4">
@@ -251,21 +251,21 @@
       <h2 class="title is-3 has-text-centered">Multi-view & Incremental Reconstruction Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
+          <video poster="" id="multi_video1" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
             <source src="static/videos/carousel1.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
+          <video poster="" id="multi_video2" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
             <source src="static/videos/carousel2.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
+          <video poster="" id="multi_video3" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
             <source src="static/videos/carousel3.mp4"
             type="video/mp4">
