--- a/index.html
+++ b/index.html
@@ -190,17 +190,17 @@
           </video>
         </div>
         <div class="item item-video2">
-          <video poster="" id="self_video2" autoplay controls muted loop height="100%">
+          <video poster="" id="self_video2" autoplay controls muted loop height="100%" preload="metadata">
             <!-- Your video file here -->
-            <source src="static/self_ren/001.mp4"
-            type="video/mp4">
+            <source src="static/self_ren/001.mp4" type="video/mp4">
+            <p>Your browser does not support the video tag.</p>
           </video>
         </div>
         <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
+          <video poster="" id="self_video3" autoplay controls muted loop height="100%" preload="metadata">
             <!-- Your video file here -->
-            <source src="static/self_ren/001.mp4"
-            type="video/mp4">
+            <source src="static/self_ren/001.mp4" type="video/mp4">
+            <p>Your browser does not support the video tag.</p>
           </video>
         </div>
       </div>
