--- a/index.html
+++ b/index.html
@@ -184,22 +184,19 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
           <video poster="" id="self_video1" autoplay controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/self_ren/001.mp4" type="video/mp4">
+            <source src="static/self_ren/001_h264.mp4" type="video/mp4">
             <p>Your browser does not support the video tag.</p>
           </video>
         </div>
         <div class="item item-video2">
           <video poster="" id="self_video2" autoplay controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/self_ren/001.mp4" type="video/mp4">
+            <source src="static/self_ren/001_h264.mp4" type="video/mp4">
             <p>Your browser does not support the video tag.</p>
           </video>
         </div>
         <div class="item item-video3">
           <video poster="" id="self_video3" autoplay controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/self_ren/001.mp4" type="video/mp4">
+            <source src="static/self_ren/001_h264.mp4" type="video/mp4">
             <p>Your browser does not support the video tag.</p>
           </video>
         </div>
