--- a/index.html
+++ b/index.html
@@ -221,37 +221,27 @@
       <h2 class="title is-3 has-text-centered">Cross-reenacted Results</h2>
       <div id="cross-results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
-          <video poster="" id="cross_video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/cross_ren/001.mp4"
-            type="video/mp4">
+          <video poster="" id="cross_video1" autoplay controls muted loop height="100%" preload="metadata">
+            <source src="static/cross_ren/001.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
-          <video poster="" id="cross_video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/cross_ren/002.mp4"
-            type="video/mp4">
+          <video poster="" id="cross_video2" autoplay controls muted loop height="100%" preload="metadata">
+            <source src="static/cross_ren/002.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-video3">
-          <video poster="" id="cross_video3" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/cross_ren/003.mp4"
-            type="video/mp4">
+          <video poster="" id="cross_video3" autoplay controls muted loop height="100%" preload="metadata">
+            <source src="static/cross_ren/003.mp4" type="video/mp4">
           </video>
           <div class="item item-video4">
-            <video poster="" id="cross_video4" autoplay controls muted loop height="100%">
-              <!-- Your video file here -->
-              <source src="static/cross_ren/004.mp4"
-              type="video/mp4">
+            <video poster="" id="cross_video4" autoplay controls muted loop height="100%" preload="metadata">
+              <source src="static/cross_ren/004.mp4" type="video/mp4">
             </video>
           </div>
           <div class="item item-video5">
-            <video poster="" id="cross_video5" autoplay controls muted loop height="100%">
-              <!-- Your video file here -->
-              <source src="static/cross_ren/005.mp4"
-              type="video/mp4">
+            <video poster="" id="cross_video5" autoplay controls muted loop height="100%" preload="metadata">
+              <source src="static/cross_ren/005.mp4" type="video/mp4">
             </video>
           </div>
         </div>
