--- a/index.html
+++ b/index.html
@@ -261,14 +261,14 @@
         <div class="item item-video1">
           <video poster="" id="multi_video1" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
+            <source src="static/multi/001.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
           <video poster="" id="multi_video2" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4"
+            <source src="static/multi/002.mp4"
             type="video/mp4">
           </video>
         </div>
