--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="hero-body">
       <img src="static/teaser/teaser.png" alt="Teaser Image" id="tree" style="width: 100%; height: auto; max-height: 100%;">
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        FastAvatar is a feedforward 3D avatar framework capable of flexibly leveraging diverse daily recordings (e.g., a single image, multi-view observations, or monocular video) to reconstruct a high-quality 3D Gaussian Splatting (3DGS) model within seconds, using only a single unified model.
       </h2>
     </div>
   </div>
@@ -217,7 +217,7 @@
               <strong>Canonical Fusion:</strong> Multi-view Gaussian splatting representations are fused into a canonical 3DGS model, guided by loss functions like <strong>Landmark Tracking Loss</strong> and <strong>Sliced Fusion Loss</strong> to ensure proper alignment and eliminate artifacts.
             </li>
             <li>
-              <strong>Efficient Rendering:</strong> The reconstructed 3DGS avatar is driven by expression codes (e.g., derived from FLAME) for animatable facial movement control. Through activation caching, animation speeds of ~55 FPS (input 16 frames) can be achieved on an RTX 4090 GPU.
+              <strong>Efficient Rendering:</strong> The reconstructed 3DGS avatar is driven by expression codes (e.g., derived from FLAME) for animatable facial movement control, achieving real-time rendering speeds of ~55 FPS with 16 input frames on an RTX 4090 GPU.
             </li>
           </ul>
         </div>
